media/error_tc/error_256.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_9vgnDBQ.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_9vgnDBQ.cpp:8:1: error: expected ';' before '}' token
 }
 ^
